Update character details and images in enes.html

--- a/enes.html
+++ b/enes.html
@@ -114,28 +114,25 @@
 
 <div class="container">
   <div class="deste">
-    <div class="kart"><img src="enes4.png" alt="Kişi 2" /></div>
-    <div class="kart"><img src="enes2.png" alt="Kişi 3" /></div>
-    <div class="kart"><img src="enes3.png" alt="Kişi 4" /></div>
-    <div class="kart"><img src="enes1.png" alt="Kişi 5" /></div>
+    <div class="kart"><img src="s4.png" alt="Kişi 2" /></div>
+    <div class="kart"><img src="s3.png" alt="Kişi 3" /></div>
+    <div class="kart"><img src="s2.png" alt="Kişi 4" /></div>
+    <div class="kart"><img src="s1.png" alt="Kişi 5" /></div>
   </div>
 
   <div class="bilgi">
-    <h2>Enes Sabaz</h2>
+    <h2>Süleyman Deli</h2>
     <ul></ul>
-      <li>Yaş: 21</li>
-      <li>Meslek: Öğrenci(Herbokolog)</li>
-      <li>Hobiler: Oyun Oynamak, Maç İzlemek</li>
-      <li>Favori Takım: Galatasaray</li>
+      <li>Yaş: 57</li>
+      <li>Meslek: İğne İpliğin Büyük Boss'u</li>
+      <li>Hobiler: Mağazaları kontrol etmek, araştırma yapmak</li>
       <li>Yaşadığı Şehir: İstanbul</li>
-      <li>Kişilik: Her şey hakkında bilgisi var, ailenin profesörü, doğruları karşısında sonuna kadar savaşır, çok düzenli ve hamarat, temizlik ondan sorulur</li>
-      <li>Favori Yemek: İskender</li>
-      <li></li>
+      <li>Kişilik: İnatçı, Lider ruhlu, </li>
+      <li>Yemek: Her şeyi karıştırıp yemek yapabilir ve güzel olur</li>
 
     </ul>
   </div>
 </div>
-
 
 </body>
 </html>
