--- a/eda.html
+++ b/eda.html
@@ -121,7 +121,7 @@
   </div>
 
   <div class="bilgi">
-    <h2>Enes Sabaz</h2>
+    <h2>Eda Deli</h2>
     <ul></ul>
       <li>Yaş: 26</li>
       <li>Meslek: Modacı</li>
