--- a/enes.html
+++ b/enes.html
@@ -3,135 +3,129 @@
 <head>
 <meta charset="UTF-8" />
 <title>Fotoğraf Desteği Tasarımı</title>
+
 <style>
-  body {
-    background: #f5f5f5;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    height: 100vh;
-    margin: 0;
-    font-family: Arial, sans-serif;
-  }
+body {
+  background: #f5f5f5;
+  margin: 0;
+  font-family: Arial, sans-serif;
+}
 
-  .deste {
-    position: relative;
-    width: 200px;
-    height: 250px;
-    perspective: 1000px;
-  }
+/* HER ŞEYİ SARAN YAPI */
+.wrapper {
+  min-height: 100vh;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
 
-  .kart {
-    position: absolute;
-    width: 180px;
-    height: 180px;
-    border: 6px solid black; /* fotoğrafın etrafındaki siyah çerçeve */
-    border-radius: 8px;
-    overflow: hidden;
-    box-shadow: 0 10px 15px rgba(0,0,0,0.3);
-    background: white;
-    cursor: pointer;
-    transition: transform 0.3s ease, box-shadow 0.3s ease;
-    object-fit: cover;
-  }
+/* Kartlar + bilgi ORTADA */
+.container {
+  display: flex;
+  align-items: center;
+  gap: 40px;
+  margin-top: auto;
+  margin-bottom: auto;
+}
 
-  /* Fotoğrafların her birini biraz kaydırıyoruz ve döndürüyoruz */
-  .kart:nth-child(1) {
-    top: 0;
-    left: 0;
-    transform: rotate(-15deg);
-    z-index: 1;
-  }
+/* FOTOĞRAF DESTE */
+.deste {
+  position: relative;
+  width: 250px;
+  height: 250px;
+  perspective: 1000px;
+}
 
-  .kart:nth-child(2) {
-    top: 20px;
-    left: 20px;
-    transform: rotate(-7deg);
-    z-index: 2;
-  }
+.kart {
+  position: absolute;
+  width: 180px;
+  height: 180px;
+  border: 6px solid black;
+  border-radius: 8px;
+  overflow: hidden;
+  box-shadow: 0 10px 15px rgba(0,0,0,0.3);
+  background: white;
+  cursor: pointer;
+  transition: transform 0.3s ease, box-shadow 0.3s ease;
+}
 
-  .kart:nth-child(3) {
-    top: 40px;
-    left: 40px;
-    transform: rotate(-3deg);
-    z-index: 3;
-  }
+.kart:nth-child(1) { top: 0; left: 0; transform: rotate(-15deg); z-index: 1; }
+.kart:nth-child(2) { top: 20px; left: 20px; transform: rotate(-7deg); z-index: 2; }
+.kart:nth-child(3) { top: 40px; left: 40px; transform: rotate(-3deg); z-index: 3; }
+.kart:nth-child(4) { top: 60px; left: 60px; transform: rotate(0deg); z-index: 4; }
 
-  .kart:nth-child(4) {
-    top: 60px;
-    left: 60px;
-    transform: rotate(0deg);
-    z-index: 4;
-  }
+.kart:hover {
+  transform: rotate(0deg) scale(1.1);
+  box-shadow: 0 20px 30px rgba(0,0,0,0.6);
+  z-index: 10;
+}
 
-  .kart:nth-child(5) {
-    top: 80px;
-    left: 80px;
-    transform: rotate(5deg);
-    z-index: 5;
-  }
+.kart img {
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+}
 
-  /* Hover ile öne çıkarma efekti */
-  .kart:hover {
-    transform: rotate(0deg) scale(1.1);
-    box-shadow: 0 20px 30px rgba(0,0,0,0.6);
-    z-index: 10 !important;
-  }
+/* BİLGİ ALANI */
+.bilgi {
+  max-width: 320px;
+}
 
-  /* Fotoğrafın içi */
-  .kart img {
-    width: 100%;
-    height: 100%;
-    object-fit: cover;
-    display: block;
-  }
+.bilgi h2 {
+  margin: 0 0 10px 0;
+  font-size: 1.5rem;
+}
 
-  /* Bilgi alanı */
-  .bilgi {
-    margin-left: 60px;
-    max-width: 220px;
-  }
+.bilgi ul {
+  padding-left: 18px;
+}
 
-  .bilgi h2 {
-    margin: 0 0 10px 0;
-    font-size: 1.5rem;
-  }
+.bilgi li {
+  margin-bottom: 8px;
+  line-height: 1.4;
+}
 
-  .bilgi p {
-    color: #555;
-    font-size: 1rem;
-  }
-
-  /* Deste ve bilgiler yan yana */
-  .container {
-    display: flex;
-    align-items: center;
-    gap: 40px;
-  }
+/* ALTTAKİ YAZI */
+.takip {
+  transform: translateY(-200px);
+}
 </style>
 </head>
+
 <body>
 
-<div class="container">
-  <div class="deste">
-    <div class="kart"><img src="s4.png" alt="Kişi 2" /></div>
-    <div class="kart"><img src="s3.png" alt="Kişi 3" /></div>
-    <div class="kart"><img src="s2.png" alt="Kişi 4" /></div>
-    <div class="kart"><img src="s1.png" alt="Kişi 5" /></div>
+<div class="wrapper">
+
+  <div class="container">
+    <div class="deste">
+      <div class="kart"><img src="enes4.png" alt="Kişi 2"></div>
+      <div class="kart"><img src="enes2.png" alt="Kişi 3"></div>
+      <div class="kart"><img src="enes3.png" alt="Kişi 4"></div>
+      <div class="kart"><img src="enes1.png" alt="Kişi 5"></div>
+    </div>
+
+    <div class="bilgi">
+      <h2>Enes Sabaz</h2>
+      <ul>
+        <li>Yaş: 21</li>
+        <li>Meslek: Öğrenci (Herbokolog)</li>
+        <li>Hobiler: Oyun Oynamak, Maç İzlemek</li>
+        <li>Favori Takım: Galatasaray</li>
+        <li>Yaşadığı Şehir: İstanbul</li>
+        <li>
+          Kişilik: Her şey hakkında bilgisi var, ailenin profesörü,
+          doğruları karşısında sonuna kadar savaşır, çok düzenli ve
+          hamarat, temizlik ondan sorulur
+        </li>
+      </ul>
+    </div>
   </div>
 
-  <div class="bilgi">
-    <h2>Süleyman Deli</h2>
-    <ul></ul>
-      <li>Yaş: 57</li>
-      <li>Meslek: İğne İpliğin Büyük Boss'u</li>
-      <li>Hobiler: Mağazaları kontrol etmek, araştırma yapmak</li>
-      <li>Yaşadığı Şehir: İstanbul</li>
-      <li>Kişilik: İnatçı, Lider ruhlu, </li>
-      <li>Yemek: Her şeyi karıştırıp yemek yapabilir ve güzel olur</li>
+  <div class="takip">
+    <h4>Sosyal Medya</h4>
+    <span></span><a href="https://www.instagram.com/enessbz/" target="_blank"><img src="instagram.svg" alt="" width="30" /></a></span><br />
+</div>
 
-    </ul>
-  </div>
 </div>
 
 </body>
