Fix HTML formatting and structure

--- a/index.html
+++ b/index.html
@@ -20,11 +20,11 @@
   <!-- Giriş container -->
   <div class="container">
     <img src="IMG_3445.jpg" alt="Giriş Fotoğrafı">
+    <h3> Hoşgeldiniz </h3>
     <input type="text" id="nameInput" placeholder="İsminizi girin">
     <button type="button" onclick="kontrolEt()">Gönder</button>
     <p id="hata"></p>
   </div>
-
   <script>
     document.getElementById("nameInput").addEventListener("keydown", function (e) {
       if (e.key === "Enter") {
