Change name from Abdullah Sabaz to Abdurrahim Sabaz

--- a/abdullah.html
+++ b/abdullah.html
@@ -121,7 +121,7 @@
   </div>
 
   <div class="bilgi">
-    <h2>Abdullah Sabaz</h2>
+    <h2>Abdurrahim Sabaz</h2>
     <ul></ul>
       <li>Yaş: 62</li>
       <li>Meslek: Usta</li>
@@ -130,7 +130,10 @@
       <li>Yaşadığı Şehir: İstanbul</li>
       <li>Kişilik: Yardımsever, Çalışkan</li>
       <li>Favori Yemek: Her yemek, (sarma)</li>
-
+<div class="takip">
+    <h4>Sosyal Medya</h4>
+    <span></span><a href="https://www.instagram.com/sabazabdurrahim/" target="_blank"><img src="instagram.svg" alt="" width="30" /></a></span><br />
+</div>
     </ul>
   </div>
 </div>
