Add social media section to ayse.html

--- a/ayse.html
+++ b/ayse.html
@@ -130,7 +130,10 @@
       <li>Yaşadığı Şehir: Melbourne</li>
       <li>Kişilik: Komik, Anaç ruhlu, Çok güzel yemek yapar, Lider ruhlu</li>
       <li>Favori Yemek: Perde Pilavı</li>
-
+<div class="takip">
+    <h4>Sosyal Medya</h4>
+    <span></span><a href="https://www.instagram.com/ayseetayy/" target="_blank"><img src="instagram.svg" alt="" width="30" /></a></span><br />
+</div>
     </ul>
   </div>
 </div>
