Add social media links to eda.html
Added social media section with Instagram link.

--- a/eda.html
+++ b/eda.html
@@ -108,6 +108,10 @@
     align-items: center;
     gap: 40px;
   }
+  /* ALTTAKİ YAZI */
+.takip {
+  transform: translateY(0px);
+}
 </style>
 </head>
 <body>
@@ -132,8 +136,12 @@
       <li>Favori Yemek: Çikolatalı her şey</li>
 
     </ul>
-  </div>
+     <div class="takip">
+    <h4>Sosyal Medya</h4>
+    <span></span><a href="https://www.instagram.com/edanur_deli/" target="_blank"><img src="instagram.svg" alt="" width="30" /></a></span><br />
 </div>
-
+  </div>
+  
+</div>
 </body>
 </html>
