--- a/elif.html
+++ b/elif.html
@@ -108,6 +108,10 @@
     align-items: center;
     gap: 40px;
   }
+  /* ALTTAKİ YAZI */
+.takip {
+  transform: translateY(-10px);
+}
 </style>
 </head>
 <body>
@@ -130,7 +134,10 @@
       <li>Yaşadığı Şehir: İstanbul</li>
       <li>Kişilik: Yardımsever, Ailenin eli ayağı, Her işe koşturur, Kendine has bir komikliği var</li>
       <li>Favori Yemek: Bulgur</li>
-
+  <div class="takip">
+    <h4>Sosyal Medya</h4>
+    <span></span><a href="https://www.instagram.com/elifcerendeli?utm_source=ig_web_button_share_sheet&igsh=ZDNlZDc0MzIxNw==" target="_blank"><img src="instagram.svg" alt="" width="30" /></a></span><br />
+</div>
     </ul>
   </div>
 </div>
