Add social media section to eren.html

--- a/eren.html
+++ b/eren.html
@@ -130,7 +130,10 @@
       <li>Yaşadığı Şehir: İstanbul</li>
       <li>Kişilik: Şeytan tüyü var, girdiği ortamda hemen sevilir, Gizli bir asi, Sinirlenince gözü kimseyi görmez, Uyku onun için her şeyden önce gelir, Uyandırması dünyanın en zor işi</li>
       <li>Favori Yemek: Et, Mumbar ve Karısının Yaptığı Her Yemek</li>
-
+<div class="takip">
+    <h4>Sosyal Medya</h4>
+    <span></span><a href="https://www.instagram.com/erendelii/" target="_blank"><img src="instagram.svg" alt="" width="30" /></a></span><br />
+</div>
     </ul>
   </div>
 </div>
