--- a/esra.html
+++ b/esra.html
@@ -130,7 +130,11 @@
       <li>Yaşadığı Şehir: İstanbul</li>
       <li>Kişilik: Çok duygusal her konuda, fazla mükemmeliyetçi ama çok dağınık, çok güzel yemek yapar, yemek yapmak ve yemek yemek en büyük hobisi, dizilerle yaşar</li>
       <li>Favori Yemek: Turşu</li>
-
+      <li>BU SITEDEKI BILGILERIN GELDIGI KISIDIR</li>
+<div class="takip">
+    <h4>Sosyal Medya</h4>
+    <span></span><a href="https://www.instagram.com/esrasbzz/" target="_blank"><img src="instagram.svg" alt="" width="30" /></a></span><br />
+</div>
     </ul>
   </div>
 </div>
