Add social media section to gamze.html

--- a/gamze.html
+++ b/gamze.html
@@ -130,7 +130,10 @@
       <li>Yaşadığı Şehir: Toronto</li>
       <li>Kişilik: İnatçı, Lider ruhlu, Kendi çıkarlarına kadar vurdumduymaz, Sevdiklerine karşı çok merhametli, Ailenin en büyük kızı</li>
       <li>Favori Yemek: Makarna</li>
-
+<div class="takip">
+    <h4>Sosyal Medya</h4>
+    <span></span><a href="https://www.instagram.com/gamzesabaz/" target="_blank"><img src="instagram.svg" alt="" width="30" /></a></span><br />
+</div>
     </ul>
   </div>
 </div>
