--- a/sevgi.html
+++ b/sevgi.html
@@ -130,7 +130,10 @@
       <li>Yaşadığı Şehir: İstanbul</li>
       <li>Kişilik: Lider ruhlu, Sevdiklerine karşı çok merhametli, Ailenin psikoloğu</li>
       <li>Favori Yemek: Balık ve Yöresel Yemekler</li>
-
+<div class="takip">
+    <h4>Sosyal Medya</h4>
+    <span></span><a href="https://www.instagram.com/gelinliksevgigneiplik/" target="_blank"><img src="instagram.svg" alt="" width="30" /></a></span><br />
+</div>
     </ul>
   </div>
 </div>
