Add social media section to sevgul.html

--- a/sevgul.html
+++ b/sevgul.html
@@ -130,7 +130,9 @@
       <li>Yaşadığı Şehir: İstanbul</li>
       <li>Kişilik: İnatçı, Lider ruhlu, Sevdiklerine karşı çok merhametli, Sinirlenince uzak durulması gereken biri, EN COK KULLANDIĞI KELİME: "Nerdesin"</li>
       <li>Uğraştırıcı her yemeği yapması</li>
-
+      <div class="takip">
+          <h4>Sosyal Medya</h4>
+          <span></span><a href="https://www.instagram.com/ceylansevgul/" target="_blank"><img src="instagram.svg" alt="" width="30" /></a></span><br />
     </ul>
   </div>
 </div>
