Add personality traits to suleyman.html

--- a/suleyman.html
+++ b/suleyman.html
@@ -127,9 +127,12 @@
       <li>Meslek: İğne İpliğin Büyük Boss'u</li>
       <li>Hobiler: Mağazaları kontrol etmek, araştırma yapmak</li>
       <li>Yaşadığı Şehir: İstanbul</li>
-      <li>Kişilik: İnatçı, Lider ruhlu, </li>
+      <li>Kişilik: İnatçı, Lider ruhlu, Savaşçı, Pes etmeyez</li>
       <li>Yemek: Her şeyi karıştırıp yemek yapabilir ve güzel olur</li>
-
+      <div class="takip">
+    <h4>Sosyal Medya</h4>
+    <span></span><a href="https://www.instagram.com/bydeli_/" target="_blank"><img src="instagram.svg" alt="" width="30" /></a></span><br />
+</div>
     </ul>
   </div>
 </div>
