Change title from 'Fotoğraf Desteği Tasarımı' to 'Bilgi Kismi'

--- a/enes.html
+++ b/enes.html
@@ -2,7 +2,7 @@
 <html lang="tr">
 <head>
 <meta charset="UTF-8" />
-<title>Fotoğraf Desteği Tasarımı</title>
+<title>Bilgi Kismi</title>
 
 <style>
 body {
