--- a/gamze.html
+++ b/gamze.html
@@ -2,7 +2,7 @@
 <html lang="tr">
 <head>
 <meta charset="UTF-8" />
-<title>Fotoğraf Desteği Tasarımı</title>
+<title>Bilgi Kismi</title>
 <style>
   body {
     background: #f5f5f5;
