Add hobbies to Enes Sabaz profile

--- a/enes.html
+++ b/enes.html
@@ -109,7 +109,7 @@ body {
       <ul>
         <li>Yaş: 21</li>
         <li>Meslek: Öğrenci (Herbokolog)</li>
-        <li>Hobiler: Oyun Oynamak, Maç İzlemek</li>
+        <li>Hobiler: Oyun Oynamak, Maç İzlemek, Gezmek, Kitap Okumak</li>
         <li>Favori Takım: Galatasaray</li>
         <li>Yaşadığı Şehir: İstanbul</li>
         <li>
